--- a/MyLibrary/src/ui/jfCustomer/JFCustomer.form
+++ b/MyLibrary/src/ui/jfCustomer/JFCustomer.form
@@ -6,9 +6,6 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ff" red="ff" type="rgb"/>
     </Property>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[800, 800]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-100,0,0,3,-108"/>
@@ -1395,13 +1392,14 @@
             <Component class="javax.swing.JComboBox" name="comboSearch">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="6">
-                    <StringItem index="0" value="Nom"/>
-                    <StringItem index="1" value="Pr&#xe9;nom"/>
-                    <StringItem index="2" value="Nom Soci&#xe9;t&#xe9;"/>
-                    <StringItem index="3" value="Email"/>
-                    <StringItem index="4" value="N&#xb0; T&#xe9;l&#xe9;phone"/>
-                    <StringItem index="5" value="Adresse IP"/>
+                  <StringArray count="7">
+                    <StringItem index="0" value="Tous les clients"/>
+                    <StringItem index="1" value="Nom"/>
+                    <StringItem index="2" value="Pr&#xe9;nom"/>
+                    <StringItem index="3" value="Nom Soci&#xe9;t&#xe9;"/>
+                    <StringItem index="4" value="Email"/>
+                    <StringItem index="5" value="N&#xb0; T&#xe9;l&#xe9;phone"/>
+                    <StringItem index="6" value="Adresse IP"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -1415,14 +1413,17 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable1">
+                <Component class="javax.swing.JTable" name="tableCustomers">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="1" rowCount="6">
-                        <Column editable="true" title="R&#xe9;sultat" type="java.lang.String"/>
+                        <Column editable="false" title="R&#xe9;sultat" type="java.lang.Object"/>
                       </Table>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tableCustomersMouseReleased"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
